# kratt

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/: books.csv  download_external_sources.sh  publication_date_range.csv
kratt/: cli.py  scan_books.py
