[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kratt"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.13.0"
dependencies = [
    "opencc>=1.1.9",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.scripts]
kratt = "kratt.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "twine", 
    "maturin",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true
